# polimi-parallel-computing-course

./: CMakeLists.txt  Movie.py  README.txt  clean.sh
cpu/: CMakeLists.txt  Makefile  Particles2D_2024.c  Particles2D_2024.job
cuda/: CMakeLists.txt  Makefile  Particles2D_2024.cu  Particles2D_2024.job
gpu/: .gitignore  Makefile  Particles2D_2024.job  ReadPopulation.c  run.slurm
openmp/: CMakeLists.txt  Makefile  Particles2D_2024.c  Particles2D_2024.job
read-population/: CMakeLists.txt  main.c
serial/: CMakeLists.txt  Makefile  Particles2D_2024.c  Particles2D_2024.job
